# sm_servcie_model

./: .gitignore  CMakeLists.txt
include/common/: callback.h  enum.h  enum_helper.h  file_stream.h  filewatcher.h  manual_event.h  mutex.h  mutex_stub.h  named_value.h  pulsed_thread.h  service_locator.h  sm_debug.h  string.h  string_helper.h  thread.h  time_calculator.h  timer.h  utility.h  xml_property_bag.h
include/common/macosx/: macosx_filewatcher.h
include/common/nix/: callstack.h  nix_filewatcher.h  nix_manual_event.h  nix_mutex.h  nix_sm_debug.h  nix_thread.h  nix_timer.h
include/common/stub/: stub_filewatcher.h
include/common/win/: callstack.h  win_filewatcher.h  win_manual_event.h  win_mutex.h  win_sm_debug.h  win_thread.h  win_timer.h
include/core/: base.h  crc32.h  ibase.h  module.h  ref_obj_ptr.h  ref_obj_qi_ptr.h  utils.h
include/other/: utf8_converter.h
include/plugin/: co_class_set.h  dll_holder.h  factory_tools.h  loader.h  module.h  module_holder.h  service_info.h
include/plugin/nix/: dll_holder.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/class_factory/: CMakeLists.txt  class_factory.cpp  class_factory.h
src/core/regtool/: CMakeLists.txt  main.cpp
src/core/service_registry/: CMakeLists.txt  module.cpp  service_registry.cpp  service_registry.h
src/core/sm_common/: CMakeLists.txt  sm_common.cpp
src/examples/: CMakeLists.txt
src/examples/construct_destroy/: CMakeLists.txt
src/examples/multy_component/: CMakeLists.txt
src/examples/multy_component/client/: main.cpp
src/examples/multy_object/: CMakeLists.txt  main.cpp
src/examples/objects_as_params/: CMakeLists.txt  main.cpp
src/examples/query_interface_1/: CMakeLists.txt  main.cpp
src/examples/query_interface_2/: CMakeLists.txt  main.cpp
src/examples/simple_component/: CMakeLists.txt
src/examples/simple_component/client/: main.cpp
src/examples/simple_enum/: CMakeLists.txt  main.cpp
src/examples/simple_object/: CMakeLists.txt  main.cpp
src/examples/string_enum/: CMakeLists.txt  main.cpp
src/litesql/: .tmpDiff.patch
src/litesql/src/: CMakeLists.txt
src/litesql/src/examples/: example.cpp  graphdatabase.cpp
src/litesql/src/generator/: CMakeLists.txt
src/litesql/src/skype/: main.cpp  main.hpp  main_skype.xml
src/skype/: CMakeLists.txt
src/skype/Services/: CMakeLists.txt
src/skype/Services/PlatformUtils/: CMakeLists.txt  PlatformUtilsImpl.cpp  module.cpp
src/skype/Services/PlatformUtils/linux/: PlatformUtilsImpl.cpp
src/skype/Services/ShCore/: CMakeLists.txt  DBCtrlImp.h  DBCtrlImpl.cpp  DBEventImpl.cpp  DBEventImpl.h  DBObserverImpl.cpp  DBObserverImpl.h  DBWatcherImpl.cpp  DBWatcherImpl.h  PlatformUtilsImpl.h  SettingsImpl.cpp  SettingsImpl.h  module.cpp
src/skype/Services/ShCore/linux/: PlatformUtilsImpl.cpp
src/skype/Services/ShCore/macosx/: PlatformUtilsImpl.cpp
src/skype/Services/ShCore/macosx/files/release/: libjson.dylib
src/skype/Services/ShCore/win/: PlatformUtilsImpl.cpp
src/skype/Services/ShCore/win/files/Debug/: jsonD.lib
src/skype/Services/ShCore/win/files/Release/: json.lib
src/skype/Services/ShCore/win/include/json-c/: json_config.h
src/skype/Services/core/: CMakeLists.txt  DBEventImpl.cpp  DBEventImpl.h  DBObserverImpl.cpp  DBObserverImpl.h  DBWatcherImpl.cpp  DBWatcherImpl.h  module.cpp
src/skype/applications/: CMakeLists.txt
src/skype/applications/db_generator/: CMakeLists.txt  db_generator.cpp
src/skype/applications/filewatcher_test/: CMakeLists.txt  filewatcher_test.cpp
src/skype/applications/functionality_test/: functionality_test.cpp  main.cpp
src/skype/applications/history_db_test/: CMakeLists.txt  history_db_test.cpp
src/skype/applications/history_gui/: CMakeLists.txt  SkyHistoryU.pro  qml.qrc
src/skype/applications/history_gui/qml/: AccSettingsRect.qml  DataArea.qml  Helper.js  MainView.qml  ProgressBarCustom.qml  ScrollStyle.qml  SettingsView.qml  SkyList.qml  TreesArea.qml  main.qml
src/skype/applications/history_gui/src/: SkyHistoryMain.cpp  history_gui.cpp  skycontactstreemodel.cpp  skycontactstreemodel.h  skymodel.cpp  skymodel.h  skyproxymodel.cpp  skyproxymodel.h
src/skype/applications/libjson_test/: CMakeLists.txt  libjson_test.cpp  test.json  test1.json
src/skype/applications/settings_test/: CMakeLists.txt  settings_test.cpp
src/skype/include/: class_ids.h  db_ifaces.h  ifaces.h  iplatformutils.h  skype_helpers.h
src/skype/litesql/: CMakeLists.txt
src/skype/litesql/docs/doxygen/: doxygen.conf
src/skype/litesql/files/: history.db
src/skype/litesql/include/litesql/: datasource.hpp  except.hpp  utils.hpp
src/skype/litesql/src/: CMakeLists.txt
src/skype/litesql/src/examples/: CMakeLists.txt  example.cpp  exampledatabase.cpp  exampledatabase.hpp  exampledatabase.xml
src/skype/litesql/src/generator/: CMakeLists.txt  litesql-gen-cpp.cpp  litesql.dtd  objectmodel.cpp  xmlobjects.cpp  xmlobjects.hpp
src/skype/litesql/src/skype/: CMakeLists.txt  history_main_db.cpp  history_main_db.hpp  history_main_methods.cpp  history_skype.xml  litesql.dtd  main_skype.xml  skype.cpp  skype_main_db.cpp  skype_main_db.hpp  skype_main_methods.cpp
